2009-01-11  Matthias Klose  <doko@ubuntu.com>

	PR middle-end/38616, backport from mainline:
	2008-05-04  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*strmovsi_1): Simplify asm alternatives.
	(*strmovsi_rex_1): Ditto.
	(*strsetsi_1): Ditto.
	(*strsetsi_rex_1): Ditto.

	(add<mode>cc): Macroize expander from addqicc, addhicc, addsicc and
	adddicc expanders using SWI mode iterator.

2009-01-11  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-12-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/34571
	* config/alpha/predicates.md (symbolic_operand): Return 1 for a
	label_ref with an offset.

	2008-03-31  James E. Wilson  <wilson@tuliptree.org>

	* varasm.c (output_constant_pool_1): In LABEL_REF check,
	use tmp consistently.

2009-01-11  Markus Schoepflin  <markus.schoepflin@comsoft.de>

	PR debug/7055
	* gcc/mips-tfile.c (parse_def): Fix parsing of def strings
	starting with digits.

2009-01-11  Ira Rosen  <irar@il.ibm.com>

	Backport from mainline:
	2009-01-08  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/37194
	* tree-vect-transform.c (vect_estimate_min_profitable_iters):
	Don't add the cost of cost model guard in prologue to scalar
	outside cost in case of known number of iterations.

2009-01-11  Ira Rosen  <irar@il.ibm.com>

	Backport from mainline:
	2008-12-29  Dorit Nuzman  <dorit@il.ibm.com>
		    Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/38529
	* tree-vect-transform (vect_transform_stmt): Handle inner-loop stmts
	whose DEF is used in the loop-nest that is being vectorized, but
	outside the immediately enclosing loop.

2009-01-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.c (output_call): Relocate non-jump insns in the delay slot of long
	absolute calls when generating PA 2.0 code.

2009-01-07  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38752
	* tree-ssa-structalias.c (set_uids_in_ptset): Do not assert we
	find a subvariable as we might have invalid accesses.
