@@ -1,3 +1,8 @@
+2009-01-16  Uros Bizjak  <ubizjak@gmail.com>
+
+	* sched-deps.c (sched_analyze_2)[UNSPEC_VOLATILE]: Flush pending
+	memory loads and stores.
+	
 2009-01-11  Matthias Klose  <doko@ubuntu.com>
 
 	PR middle-end/38616, backport from mainline:
@@ -54,8 +59,8 @@
 
 2009-01-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
-	* pa.c (output_call): Relocate non-jump insns in the delay slot of long
-	absolute calls when generating PA 2.0 code.
+	* pa.c (output_call): Relocate non-jump insns in the delay slot of
+	long absolute calls when generating PA 2.0 code.
 
 2009-01-07  Richard Guenther  <rguenther@suse.de>
 
